Bug 169275 - Unexpected indent after toggle off of level 2 bullet and toggle on again
Summary: Unexpected indent after toggle off of level 2 bullet and toggle on again
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-05 14:58 UTC by Miklos Vajna
Modified: 2025-11-10 07:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (19.65 KB, application/vnd.oasis.opendocument.presentation)
2025-11-05 14:58 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-11-05 14:58:13 UTC
Created attachment 203753 [details]
Minimal reproducer

Steps to reproduce the problem:

1. Open the attached bugdoc
2. Go to the last paragraph of the only shape in the document, to the end of it.
3. Press Toolbar -> Toggle Unordered List, now the bullet disappears, OK.
4. Press Toolbar -> Toggle Unordered List, again.

Expected behavior: an indent that is consistent with previous bullets in the shape, based on what's configured for Level 1 in the master page, i.e. 0.30cm.

Actual behavior: indent of 0cm, which is a *third* value, other bullets in the shape have 0.3cm (level 1) and 1.5cm (level 2).
Comment 1 Commit Notification 2025-11-10 07:10:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/258155a54cb94527638d4ece8a4674cb4a7b8308

tdf#169275 sd UI: clear direct format when turning off bullet/num

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.